--- a/style.css
+++ b/style.css
@@ -60,3 +60,14 @@ button:hover {
   -o-box-shadow: 0 1px 10px #D9D9D9;
   box-shadow: 0 1px 10px #D9D9D9;
 }
+
+/*----- media queries -----*/
+@media (max-width:780px) {
+  #live, #recording {
+    width: 100%;
+    height: 30%;
+  }
+  button {
+    width: 30%
+  }
+}
